--- a/materialize-portfolio/index.html
+++ b/materialize-portfolio/index.html
@@ -224,7 +224,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      <h5 class="center-align white-text">Icons created by <a href="iconify.com" class="white-text">Iconify </a>- Written with love in Barcelona, Spain</h5>
+      <h5 class="center-align white-text">Icons designed by <a href="iconify.com" class="white-text">Iconify </a>- Written with love in Barcelona, Spain</h5>
       </div>
     </div>
   </footer>
