--- a/to-do-pwa/index.html
+++ b/to-do-pwa/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
   <meta name="theme-color" content="#333652">
-  <link rel="canonical" href="https://patrickminero.github.io/projects/to-do-pwa/"/>
+  <link rel="icon" href="media/icons/icon_72.png">
+  <link rel="canonical" href="https://patrickminero.github.io/projects/to-do-pwa/index.html"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://kit.fontawesome.com/8631d0c616.js" crossorigin="anonymous"></script>
   <link rel="manifest" href="manifest.json">
@@ -14,7 +15,7 @@
   <!--IOS support-->
   <link rel="apple-touch-icon" href="media/icons/maskable_icon.png">
   <meta name="apple-mobile-web-app-status-bar" content="#333652">
-  <title>To Do App - Minimalist Desing</title>
+  <title>To Do App - Patrick Minero</title>
 </head>
 <body>
   <main id="app">
