add meta description tag
updated SEO

--- a/to-do-pwa/index.html
+++ b/to-do-pwa/index.html
@@ -16,6 +16,7 @@
   <link rel="apple-touch-icon" href="media/icons/maskable_icon.png">
   <meta name="apple-mobile-web-app-status-bar" content="#333652">
   <title>To Do App - Patrick Minero</title>
+  <meta name="description" content="Simple, onsistent and reliable To Do Web App optimized as a PWA to be functional even when offline and downloadable to function as a native application.">
 </head>
 <body>
   <main id="app">
