update on small projects

--- a/user_authentication_form/index.html
+++ b/user_authentication_form/index.html
@@ -14,14 +14,14 @@
                 <div id="success"></div>
                 <div id="error"></div>
                 <input type="text" name="name" id="name" placeholder="Your Name..." required autocomplete="off">
-                <input type="email" name="email" id="email" placeholder="Your Email..." required autocomplete="off">
-                <input type="password" name="password" id="password" placeholder="Your Password..." >
+                <input type="text" name="email" id="email" placeholder="Your Email..." required autocomplete="off">
+                <!-- <input type="password" name="password" id="password" placeholder="Your Password..." >
                 <div id="password-message">
                     <p id="lower"><span>✖</span> Must contain a lowercase character</p>
                     <p id="upper"><span>✖</span> Must contain a uppercase character</p>
                     <p id="number"><span>✖</span> Must contain a number</p>
                     <p id="character"><span>✖</span> Must contain a special character</p>
-                </div>
+                </div> -->
                 <textarea name="message" id="message" cols="30" rows="10" placeholder="Write a message.."></textarea>
                 <button type="submit" id="submit">Send</button>
             </form>
