fixed minor layout and info issues

--- a/weather_pwa/index.html
+++ b/weather_pwa/index.html
@@ -46,8 +46,8 @@
             <img id="current-img" src="media/clear-day.svg" alt="sun icon" title='Icons made by Freepik from www.flaticon.com'>
             <h1><span id="current-temp"></span></h1>
             <h2 id="current-desc"></h2>
-            <h3>Feels like: <span id="current-feels"></span> ºC</h3>
-            <h3>Wind: <span id="current-wind"></span> M/H</h3>
+            <h3>Feels like: <span id="current-feels"></span></h3>
+            <h3>Wind: <span id="current-wind"></span></h3>
         </div>
 
     </div>
